# RocketTodoMVC

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Procfile  README.md
migrations/2018-07-30-163554_initial_setup/: up.sql
src/: database.rs  main.rs  schema.rs
src/controller/: mod.rs  todo_controller.rs
src/form/: mod.rs  todo_form.rs
src/model/: mod.rs  todo_model.rs
templates/layouts/: main.html.hbs
templates/todo/: edit.html.hbs  index.html.hbs  new.html.hbs  show.html.hbs
