[package]
name = "rocket_todo_mvc"
version = "0.1.0"
authors = ["Rezha Julio <contact@rezhajulio.id>"]

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"

serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"

diesel = { version = "0.16", features = ["postgres"] }
diesel_codegen = { version = "0.16.1", features = ["postgres"] }
dotenv = "0.13.0"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]
version = "0.3.15"